# basis-tracker

./: .gitignore  AGENTS.md  Alice_Bob_Redemption_Test.md  BUILD_AND_CREATE_RESERVE.md  BUILD_INSTALL.md  CHANGES_TRACKER_SUBMISSION.md  CONFIGURATION.md  CRUSH.md  Cargo.toml  DEPENDENCY_RESOLUTION_SUMMARY.md  HTTP_API.md  OPENAPI.md  README.md  REAL_SCANNER_IMPLEMENTATION.md  RESERVE_NOTE_REDEMPTION_TESTING_PLAN.md  SCHNORR_IMPLEMENTATION.md  SCHNORR_SIGNATURE_SPEC.md  SERVER_SCRIPTS.md  SILVERCENTS.md  SILVERCENTS_DELIVERY_SUMMARY.md  SILVERCENTS_DEMO.md  SILVERCENTS_FILE_MANIFEST.md  SILVERCENTS_IMPLEMENTATION_SUMMARY.md  SILVERCENTS_QUICKSTART.md  SILVERCENTS_README.md  TEST_RESULTS.md  alice_bob_workflow.md  api.txt  basis_schnorr_test_vectors.json  check_ergo_lib.rs  clean_database.sh  cli_demo.md  client.txt  complete_basis_cli_command_spec.md  concrete_workflow_commands.md  create_test_note_and_redeem.py  ergo_node_setup.md  extract_test_vectors.rs  minimal_param_server.rs  minimal_path_test.rs  (+39 more)
.github/workflows/: test.yml
config/: basis.toml  ergo_nodes.toml
contract/: basis.es  basis_token.es
crates/basis_app/: Cargo.toml
crates/basis_app/src/: app.rs  lib.rs  main.rs  ui.rs
crates/basis_cli/: Cargo.toml
crates/basis_cli/src/: account.rs  api.rs  config.rs  crypto.rs  demo_keys.rs  interactive.rs  lib.rs  main.rs  test_json.rs
crates/basis_cli/src/commands/: account.rs  keypair.rs  mod.rs  note.rs  reserve.rs  silvercents.rs  status.rs  test_redemption.rs  transaction.rs
crates/basis_cli/tests/: cli_integration_tests.rs  test_404_issue.rs
crates/basis_core/: Cargo.toml
crates/basis_core/src/: impls.rs  lib.rs  traits.rs  types.rs
crates/basis_offchain/: Cargo.toml
crates/basis_offchain/src/: lib.rs  schnorr.rs  test_helpers.rs  transaction_builder.rs
crates/basis_server/: Cargo.toml
crates/basis_server/src/: api.rs  config.rs  create_reserve_tests.rs  lib.rs  main.rs  models.rs  reserve_api.rs  store.rs  tracker_box_updater.rs  wallet_api.rs
crates/basis_server/src/acceptance/: builder.rs  config.rs  mod.rs
crates/basis_server/tests/: acceptance_api_integration_tests.rs  api_avl_integration_tests.rs  api_integration_tests.rs  avl_tree_integration_tests.rs  cors_tests.rs  http_api_integration_tests.rs  test_issuer_endpoint_404.rs  tracker_box_updater_integration.rs
crates/basis_store/: Cargo.toml
crates/basis_store/benches/: note_operations_bench.rs
crates/basis_store/examples/: chaincash_scanner_demo.rs  continuous_scanner_demo.rs  cross_verification_report.rs  ergo_scanner_demo.rs  full_integration_demo.rs  memory_redemption_demo.rs  real_ergo_scanner_demo.rs  real_scanner_demo.rs  redemption_demo.rs  reserve_tracker_demo.rs  simple_redemption_demo.rs
crates/basis_store/src/: avl_tree.rs  basis_spec_tests.rs  contract_compiler.rs  cross_validation_tests.rs  cross_verification.rs  cross_verification_tests.rs  ergo_scanner.rs  ergo_scanner_test.rs  integration_tests.rs  lib.rs  main.rs  persistence.rs  property_tests.rs  real_ergo_scanner.rs  real_scanner_integration_tests.rs  redemption.rs  redemption_blockchain_tests.rs  redemption_simple_tests.rs  reserve_tracker.rs  reserve_tracking_test.rs  schnorr.rs  schnorr_comprehensive_test.rs  schnorr_test_vectors.rs  schnorr_tests.rs  schnorr_verification_vectors.rs  simple_integration_tests.rs  test_ergo_scanner.rs  test_helpers.rs  tests.rs  tracker_scanner.rs  tracker_scanner_test.rs  transaction_builder.rs  transaction_builder_tests.rs
crates/basis_store/src/ergo_scanner/: ergo_scanner.rs  http_client.rs  minimal_ergo_scanner.rs  real_ergo_scanner.rs
crates/basis_trees/: Cargo.toml
crates/basis_trees/src/: avl_tree.rs  avl_tree_tests.rs  errors.rs  fjall_storage.rs  fjall_storage_edge_case_tests.rs  fjall_storage_tests.rs  in_memory_recovery.rs  lib.rs  proofs.rs  recovery_tests.rs  state.rs  storage.rs  test_helpers.rs
crates/celaut_payment/: Cargo.toml
crates/integration_tests/: Cargo.toml
crates/integration_tests/examples/: agent_payment_demo.rs  silvercents_demo.rs  wallet_bot_demo.rs
crates/integration_tests/src/: lib.rs
crates/integration_tests/tests/: end_to_end.rs  load_test.rs  reserve_collateralization.rs  server_flow.rs  token_reserves.rs
demo/: QUICKSTART.md  README.md  README_SILVERCENTS.md  SILVERCENTS_DEMO.md  SILVERCENTS_IMPLEMENTATION.md  alice_issuer.sh  bob_receiver.sh  bob_receiver_fixed.sh  comprehensive_test.sh  config.toml  debug_test.sh  full_demo_test.sh  minimal_test.sh  real_scanner_demo.sh  robust_test.sh  run_demo.sh  run_full_tutorial.sh  silvercents_complete_demo.sh  silvercents_issuer.sh  silvercents_receiver.sh  silvercents_redeem.sh  silvercents_setup.sh  simple_http_test.sh  simple_test.sh  simple_test2.sh  test_note.sh  test_notes_endpoint.sh  test_post.sh  test_server.sh
demo/output/: note.json  test_note.json
demo/silvercents/: README.md  customer_redeemer.sh  full_demo.sh  silvercents_customer.sh  silvercents_demo.sh  silvercents_utils.sh  silvercents_vendor.sh  utils.sh  vendor_issuer.sh
docs/: SILVERCENTS_ARCHITECTURE.md  TRACKER_BOX_SETUP.md
specs/: CLI_TOOLS_ANALYSIS.md  FJALL_IMPLEMENTATION_SUMMARY.md  FJALL_STORAGE_PLAN.md  PRODUCTION_READINESS_AUDIT.md  RECOVERY_IMPLEMENTATION.md  REMAINING_ENHANCEMENTS.md  SCHNORR_SIGNATURE_SPEC.md  SERVER_SCRIPTS.md  acceptance_predicates.md  ergo_node_schnorr_sign_api_spec.md  interactive_demo.md  persistence.md  redemption_cli_spec.md  simple_demo_implementation_plan.md  simple_demo_plan.md  spec.md  testing_redemption_transaction_spec.md  tracker_testing_state_2026-05-14.md  trees.md
specs/client/: basis_cli_analysis.md
specs/ergo/: avl_plus_tree_serialization.md  avl_tree_spec.md  byte_array_register_serialization.md  ergobox_serialization.md  group_point_register_serialization.md  p2pk_address_derivation.md  transaction_assembly_serialization.md
test_output/: note_1778776146.json  note_1778786188.json  note_1778793404.json  note_1778794195.json  note_1778838566.json
tests/: end_to_end_flow.rs  notes_issuer_behavior.md  tracker_box_updater_integration.rs
(+19 files in other folders)
