[workspace]
members = ["crates/*"]
resolver = "2"

[workspace.dependencies]
serde_json = "1.0.108"
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
tracing = "0.1.37"
axum = "0.7"
fjall = "2"
ergo_client = { git = "https://github.com/SethDusek/ergo_client.git" }
ergo-lib = { version = "0.28.0", features = [
    "compiler",
] }
ergo_avltree_rust = "0.1.1"