[workspace]
members = ["crates/*"]
resolver = "2"

[workspace.dependencies]
serde_json = "1.0.108"
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
tracing = "0.1.37"
axum = "0.8.6"
fjall = "2"
# ergo-lib removed due to dependency conflicts with Rust 1.82.0
# Using minimal scanner approach instead
ergo_avltree_rust = "0.1.1"
secp256k1 = "0.27"
blake2 = "0.10"