[workspace]
members = ["crates/*", "crates/integration_tests"]

resolver = "2"

[workspace.dependencies]
serde_json = "1.0.108"
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
tracing = "0.1.37"
axum = "0.8.6"
fjall = "2"
ergo_avltree_rust = "0.1.1"
secp256k1 = "0.27"
blake2 = "0.10"
# Ergo blockchain dependencies for scanner - using compatible versions
ergo-lib = "0.13.0"
thiserror = "1.0"
reqwest = "0.11"