[package]
name = "basis_app"
version = "0.1.0"
edition = "2021"
license = "CC0-1.0"

[lib]
name = "basis_app"
path = "src/lib.rs"

[[bin]]
name = "basis-ui"
path = "src/main.rs"

[dependencies]
# Async runtime
tokio = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Cryptography
secp256k1 = { workspace = true }
blake2 = { workspace = true }
hex = "0.4"

# Utilities
anyhow = "1.0"
thiserror = "1.0"

num-bigint = "0.4"
generic-array = "0.14"
rand = "0.8"

# Ergo
ergo-lib = { workspace = true }

# Internal
basis_cli = { path = "../basis_cli" }
basis_store = { path = "../basis_store" }
