[package]
name = "basis_core"
version = "0.1.0"
edition = "2021"
license = "CC0-1.0"

[lib]
name = "basis_core"
path = "src/lib.rs"

[dependencies]
blake2 = { workspace = true }
generic-array = "0.14"
secp256k1 = { version = "0.27", features = ["rand-std"] }
num-bigint = "0.4.6"
rand = "0.8"
hex = "0.4"
thiserror = { workspace = true }
ergo_avltree_rust = { workspace = true }