[package]
name = "basis_server"
version = "0.1.0"
edition = "2021"
license = "CC0-1.0"

[dependencies]
axum = { workspace = true, features = ["macros"] }
tokio = { workspace = true, features = ["full"] }
tracing = { workspace = true }
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
tower-http = { version = "0.6", features = ["trace", "cors"] }
serde = { workspace = true }
serde_json = { workspace = true }
hex = "0.4"
ergo-lib = { workspace = true }
blake2 = "0.10"
generic-array = "0.14"

[dependencies.basis_store]
path = "../basis_store"

[dependencies.basis_offchain]
path = "../basis_offchain"

[dependencies.secp256k1]
version = "0.27"
features = ["rand-std"]

[dependencies.config]
version = "0.13"
features = ["toml"]

# Test dependencies
[dev-dependencies]
tokio = { workspace = true, features = ["full", "rt-multi-thread"] }
tower = { version = "0.4", features = ["util"] }

[[bin]]
name = "basis_server"
path = "src/main.rs"