[package]
name = "basis_store"
version = "0.1.0"
edition = "2021"
license = "CC0-1.0"

[lib]
name = "basis_store"
path = "src/lib.rs"

[dependencies]
ergo_avltree_rust = { workspace = true }
fjall = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tempfile = "3.10.0"
hex = "0.4"
thiserror = "1.0"
tokio = { version = "1.0", features = ["rt", "macros", "rt-multi-thread", "time"] }
secp256k1 = { version = "0.27", features = ["rand-std"] }
blake2 = { workspace = true }
# ergo-lib = { workspace = true, features = ["compiler"] }
# ergo_client = { workspace = true }
num-bigint = "0.4.6"
rand = "0.8"
