[package]
name = "basis_store"
version = "0.1.0"
edition = "2021"
license = "CC0-1.0"

[lib]
name = "basis_store"
path = "src/lib.rs"

[dependencies]
ergo_avltree_rust = { workspace = true }
fjall = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tempfile = "3.10.0"
hex = "0.4"
thiserror = { workspace = true }
tokio = { version = "1.0", features = ["rt", "macros", "rt-multi-thread", "time", "sync"] }
secp256k1 = { version = "0.27", features = ["rand-std"] }
blake2 = { workspace = true }
num-bigint = "0.4.6"
rand = "0.8"
# Using reqwest with rustls to avoid OpenSSL dependencies
reqwest = { version = "0.12.23", features = ["json", "rustls-tls"], default-features = false, optional = true }
# Ergo blockchain dependencies for scanner - using compatible version
ergo-lib = { workspace = true }

# Test dependencies
[dev-dependencies]
proptest = "1.0"
criterion = "0.5"
tempfile = "3.10.0"

[features]
default = ["ergo_scanner"]
ergo_scanner = ["reqwest"]  # Ergo scanner using /scan and /blockchain APIs
