[package]
name = "integration_tests"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
basis_store = { path = "../basis_store" }
basis_offchain = { path = "../basis_offchain" }
basis_trees = { path = "../basis_trees" }
tokio = { workspace = true, features = ["full"] }
hex = "0.4"
base16 = "0.2.1"
thiserror = { workspace = true }
ergo-lib = { workspace = true }
celaut_payment = { path = "../celaut_payment" }
